<resources>
    <string name="app_name">PersonalTrainer</string>
    <string name="action_settings">Settings</string>
    <string name="last_exercice">Last exercice: </string>
    <string name="day">Day: </string>
    <string name="test_result">Test result: </string>
    <string name="repetitions_to_make">Repetitions to make: </string>
    <string name="text_round_done">Series done:</string>
    <string name="done">Done</string>
    <string name="your_current_progress">Your current progress:</string>
    <string name="current_training">Current training:</string>
    <string name="round_done">Round done</string>
    <string name="title_activity_plan_and_timer">PlanAndTimer</string>

    <string name="roundOutOf" formatted="false">Round %d out of %d</string>
    <string name="ceaseWaiting">Cease waiting</string>
    <string name="trainingCompleted">Training completed</string>
    <string name="startTraining">Start training</string>
    <string name="test">Test</string>
    <string name="test_description">Make as many repetitions as you can, then type it below</string>
    <string name="beginTest">Begin test</string>
    <string name="title_activity_add_new_exercise">AddNewExercise</string>
    <string name="title_add_new">Add new exercise</string>

    <!-- It's connected with factors.xml values -->
    <string-array name="exercises_to_choose">
        <item>Pushups</item>
        <item>Pullups</item>
        <item>Squats</item>
    </string-array>
</resources>
